[优化] upload to jcenter

--- a/materialpreference/gradle.properties
+++ b/materialpreference/gradle.properties
@@ -4,5 +4,9 @@ ARTIFACTID=materialpreference
 PUBLISHVERSION=1.0.0
 DESC=OH HI, THIS IS A NICE DESCRIPTION FOR A PROJECT, RIGHT?
 WEBSITE=https://github.com/ksxkq/materialpreference
-BINTRAYUSER=kkk
-BINTRAYKEY=ACB972E95211747ABD4225EA500F81023932EAF1
+GITURL=https://github.com/ksxkq/MaterialPreference.git
+EMAIL=a312965601@gmail.com
+USERNAME=xukeqiang
+USER=kkk
+APIKEY=acb972e95211747abd4225ea500f81023932eaf1
+PKGNAME=com.ksxkq.materialpreference
