--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.ksxkq:materialpreference:1.0.0'
+    compile project(':materialpreference')
 }
